fixed styles icon button on firefox

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -160,8 +160,8 @@ body {
   }
 
   .IconSvg {
-    height: 45px;
-    width: 45px;
+    height: 40px;
+    width: 40px;
   }
 
   .TextTodo_active,
